--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,8 @@ requests==2.26.0
 six==1.16.0
 urllib3==1.26.6
 Werkzeug==2.0.1
+SQLAlchemy~=1.4.23
+pip~=21.2.4
+wheel~=0.37.0
+setuptools~=57.4.0
+greenlet~=1.1.1
